<resources>
    <string name="app_name">Pokedex</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_name">Pokemon Name</string>

    <string name="dummy_pokemon_title">Charmander</string>
    <string name="dummy_pokemon_id">#001</string>
    <string name="speed">Speed</string>
    <string name="special_defence">Special Defence</string>
    <string name="special_attack">Special Attack</string>
    <string name="defence">Defence</string>
    <string name="pokedex">Pokedex</string>
    <string name="no_pokemon_found_desc">Sorry, but nothing matched your search. \nPlease try search for a different pokemon.</string>
    <string name="no_pokemon_found_title">Whoops</string>
    <string name="no_pokemon_found_btn">NEW SEARCH</string>
    <string name="attack">Attack</string>
    <string name="hp">HP</string>
    <string name="dummy_hp">37</string>
    <string name="dummy_attack">56</string>
    <string name="dummy_defence">54</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="pokemon_class">Pokemon Type</string>
    <string name="pokedex_splash">Pokédex</string>
    <string name="gotta_know_em_all">Gotta know em all</string>
    <string name="holder_hp">HP: 48</string>
    <string name="holder_attack">Attack: 48</string>
    <string name="holder_defence">Defence: 48</string>
</resources>