<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/padding_7"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/holder_results_pokemon_img"
        android:layout_width="@dimen/image_70"
        android:layout_height="@dimen/image_70"
        android:layout_marginBottom="@dimen/padding_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/pokeball" />

    <TextView
        android:id="@+id/holder_category_name"
        style="@style/text_18_bold_black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/holder_results_pokemon_img"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/pokemon_name" />

    <TextView
        android:id="@+id/holder_category_pokemon_hp"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_10"
        app:layout_constraintStart_toEndOf="@id/holder_results_pokemon_img"
        app:layout_constraintTop_toBottomOf="@id/holder_category_name"
        tools:text="@string/holder_hp" />

    <TextView
        android:id="@+id/holder_category_pokemon_attack"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/holder_category_pokemon_defence"
        app:layout_constraintStart_toEndOf="@id/holder_category_pokemon_hp"
        app:layout_constraintTop_toBottomOf="@id/holder_category_name"
        tools:text="@string/holder_attack" />

    <TextView
        android:id="@+id/holder_category_pokemon_defence"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/padding_10"
        app:layout_constraintEnd_toEndOf="@id/holder_category_name"
        app:layout_constraintTop_toBottomOf="@id/holder_category_name"
        tools:text="@string/holder_defence" />

</androidx.constraintlayout.widget.ConstraintLayout>