<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".ui.no_result.NoResultFragment">


    <ImageView
        android:id="@+id/no_result_img"
        android:layout_width="@dimen/image_200"
        android:layout_height="@dimen/image_200"
        android:layout_marginBottom="@dimen/margin_30"
        android:background="@drawable/pokeball"
        app:layout_constraintBottom_toTopOf="@id/no_pokemon_found_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/no_pokemon_found_title"
        style="@style/text_24_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_pokemon_found_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_pokemon_found_desc"
        style="@style/text_16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_10"
        android:text="@string/no_pokemon_found_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_pokemon_found_title" />

    <Button
        android:id="@+id/no_pokemon_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_52"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginEnd="@dimen/padding_16"
        android:layout_marginBottom="@dimen/margin_30"
        android:backgroundTint="@color/pokedex_bg_color"
        android:text="@string/no_pokemon_found_btn"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>